--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -150,9 +150,10 @@ import Layout from '../layouts/Layout.astro';
                     <h2 class="section-title">Get In Touch</h2>
                     <p>Ready for a cleaner space? Contact us today for a free, no-obligation quote. We’re here to help.</p>
                     <ul>
-                        <li><i class="fas fa-phone"></i> +234 123 456 7890</li>
+                        <li><i class="fas fa-phone"></i> +234 809 999 7410</li>
+                        <li><i class="fas fa-phone"></i> +234 701 574 4444</li>
                         <li><i class="fas fa-envelope"></i> info@khcglobalservices.com</li>
-                        <li><i class="fas fa-map-marker-alt"></i> 4, Ayodele Diyan Street, Ikeja, Lagos, Nigeria</li>
+                        <li><i class="fas fa-map-marker-alt"></i> 21, Oritshe Street, Ikeja, Lagos, Nigeria</li>
                     </ul>
                 </div>
                 <form name="contact" method="POST" data-netlify="true" class="contact-form animate-on-scroll fade-in-up" style="animation-delay: 0.2s;">
